--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "zod": "^3.23.8",
     "framer-motion": "^11.3.19",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
     "typescript": "^5.5.4",
@@ -36,9 +39,6 @@
     "@types/react-dom": "^18.3.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
     "prisma": "^5.19.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
