--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "tailwind-merge": "^2.5.2",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7"
-  },
-  "devDependencies": {
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.6"
+  },
+  "devDependencies": {
     "prisma": "^5.19.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
