--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.6"
+    "@types/jsonwebtoken": "^9.0.6",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5"
   },
   "devDependencies": {
     "prisma": "^5.19.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
     "tsx": "^4.16.2"
   }
 }
