Improve error handling and add database setup guide

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "prisma studio",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
+    "db:setup": "prisma db push && npm run seed:admin && npm run seed:events",
     "seed:admin": "tsx scripts/seed-admin.ts",
     "seed:events": "tsx scripts/seed-events.ts",
     "postinstall": "prisma generate"
