--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,4 @@
 {
-  "buildCommand": "npx prisma generate && npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "regions": ["iad1"]
+  "buildCommand": "npx prisma generate && npx prisma db push && npm run build",
+  "installCommand": "npm install"
 }
-
