Add admin seeding to build command

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "npx prisma generate && npx prisma db push && npm run build",
+  "buildCommand": "npx prisma generate && npx prisma db push && npm run seed:admin && npm run build",
   "installCommand": "npm install"
 }
