--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "npx prisma generate && npm run build",
+  "buildCommand": "npx prisma generate && npx prisma db push --skip-generate && npm run seed:admin && npm run seed:events && npm run build",
   "installCommand": "npm install"
 }
